# data-agent

./: .gitignore  README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_context.py  corrected_sql.py  execute_sql.py  extract_keyword.py  filter_metric.py  filter_table.py  generate_sql.py  megre_recall_info.py  merge_recall_info.py  recall_column.py  recall_metirc.py  recall_value.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/clients/: embedding_client_manager.py  es_client_manager.py  local_embedding_client.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: __init__.py  app_config.py
app/core/: context.py  log.py
app/entities/: column_info.py
app/models/: column_info.py  metric_info.py
app/prompt/: propmpt_loader.py
app/reposities/es/: value_es_repository.py
app/reposities/mysql/dw/: dw_mysql_repository.py
app/reposities/mysql/meta/: column_metric_mapper.py  meta_sql_repository.py  metric_info_mapper.py  table_info_mapper.py
app/reposities/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt
